--- a/public/simple.html
+++ b/public/simple.html
@@ -1,1 +1,1 @@
-<h1>ActionHero</h1>\nI am a flat file being served to you via the API from ./public/simple.html<br />
+<h1>Actionhero</h1>\nI am a flat file being served to you via the API from ./public/simple.html<br />
