--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,20 @@
     <link rel="stylesheet" href="/public/css/cosmo.css" type="text/css" />
     <link rel="icon" href="/public/favicon.ico" />
     <title>Actionhero.js</title>
-
-    <script src="/public/javascript/ActionheroWebsocketClient.min.js"></script>
   </head>
 
   <body>
     <div
       class="alert alert-warning"
-      style="display:none; font-weight:bold; position:fixed; top: 0px; left: 0px; width: 100%; z-index:9999; "
+      style="
+        display: none;
+        font-weight: bold;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        z-index: 9999;
+      "
       id="error-container"
     >
       <p id="error" />
@@ -24,7 +30,7 @@
       <div class="jumbotron">
         <div class="row">
           <div class="col-md-4">
-            <img src="/public/logo/actionhero.png" style="max-width: 100%" />
+            <img src="/public/logo/actionhero.png" style="max-width: 100%;" />
           </div>
           <div class="col-md-8">
             <h1>Your Actionhero Server is working.</h1>
@@ -92,7 +98,7 @@
     </div>
 
     <script type="text/javascript">
-      var populateStatus = function(data) {
+      var populateStatus = function (data) {
         if (data.serverInformation) {
           document.getElementById("serverVersion").innerHTML =
             data.serverInformation.apiVersion;
@@ -106,7 +112,7 @@
         );
       };
 
-      var populateDocumentation = function(data) {
+      var populateDocumentation = function (data) {
         for (var actionName in data.documentation) {
           for (var version in data.documentation[actionName]) {
             var action = data.documentation[actionName][version];
@@ -149,26 +155,19 @@
         }
       };
 
-      var renderError = function(error) {
+      var renderError = function (error) {
         console.error(error);
         document.getElementById("error").innerHTML = error.toString();
         document.getElementById("error-container").style.display = "block";
       };
 
-      var client = new ActionheroWebsocketClient();
-      client.action("showDocumentation", function(data) {
-        if (data.error) {
-          return renderError(data.error);
-        }
-        populateDocumentation(data);
-      });
+      fetch("/api/showDocumentation")
+        .then((response) => response.json())
+        .then((data) => populateDocumentation(data));
 
-      client.action("status", function(data) {
-        if (data.error) {
-          return renderError(data.error);
-        }
-        populateStatus(data);
-      });
+      fetch("/api/status")
+        .then((response) => response.json())
+        .then((data) => populateStatus(data));
     </script>
   </body>
 </html>
