update test server index

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
             <br />
             <br />
             <p>
-              Actionhero.js is a multi-transport API Server with integrated
-              cluster capabilities and delayed tasks.
+              Actionhero is a multi-transport API Server with integrated cluster
+              capabilities and delayed tasks.
             </p>
             <p>
               Actionhero was built from the ground up to include all the
@@ -53,22 +53,20 @@
             <div class="row">
               <div class="col-md-4">
                 <a href="/swagger.html" class="btn btn-primary"
-                  >View this server's API documentation</a
+                  >API Documentation</a
                 >
               </div>
 
               <div class="col-md-4">
-                <a href="/chat.html" class="btn btn-primary"
-                  >Try a realtime-chat with web sockets</a
-                >
+                <a href="/chat.html" class="btn btn-primary">Real-Time Chat</a>
               </div>
 
               <div class="col-md-4">
                 <a
                   href="http://www.actionherojs.com"
                   target="_blank"
-                  class="btn btn-success"
-                  >Learn More about Actionhero</a
+                  class="btn btn-outline-success"
+                  >Learn More</a
                 >
               </div>
             </div>
