--- a/public/chat.html
+++ b/public/chat.html
@@ -116,19 +116,16 @@
           client.action("createChatRoom", { name: "defaultRoom" }, function (
             data
           ) {
-            if (data.error) {
-              globalThis.alert(data.error);
-            } else {
-              client.roomAdd("defaultRoom");
-              document.getElementById("name").innerHTML =
-                '<span style="color:#' +
-                intToARGB(hashCode(client.id)) +
-                '">' +
-                client.id +
-                "</span>";
-              document.getElementById("fingerprint").innerHTML =
-                client.fingerprint;
-            }
+            if (data.error) console.error(data.error);
+            client.roomAdd("defaultRoom");
+            document.getElementById("name").innerHTML =
+              '<span style="color:#' +
+              intToARGB(hashCode(client.id)) +
+              '">' +
+              client.id +
+              "</span>";
+            document.getElementById("fingerprint").innerHTML =
+              client.fingerprint;
           });
         }
       });
