--- a/public/websocketLoadTest.html
+++ b/public/websocketLoadTest.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-language" content="en" />
   <meta name="description" content="actionhero.js" />
   <title>actionhero.js WebSocket Load Test</title>
-  <script type="text/javascript" src="/public/javascript/ActionheroWebsocketClient.min.js"></script>
+  <script type="text/javascript" src="/public/javascript/ActionheroWebsocketClient.js"></script>
 
   <style>
     body {
