--- a/public/chat.html
+++ b/public/chat.html
@@ -7,10 +7,7 @@
     <link rel="icon" href="/public/favicon.ico" />
     <title>actionhero.js</title>
 
-    <script
-      type="text/javascript"
-      src="/public/javascript/ActionheroWebsocketClient.js"
-    ></script>
+    <script type="text/javascript" src="/public/websocket.js"></script>
   </head>
 
   <body onload="boot()">
