--- a/public/chat.html
+++ b/public/chat.html
@@ -6,11 +6,9 @@
     <link href="/public/css/cosmo.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="/public/favicon.ico" />
     <title>actionhero.js</title>
-
-    <script type="text/javascript" src="/public/websocket.js"></script>
   </head>
 
-  <body onload="boot()">
+  <body>
     <br />
 
     <div class="container">
@@ -57,81 +55,69 @@
     </div>
   </body>
 
-  <script>
-    document.getElementById("messageForm").addEventListener(
-      "submit",
-      function (e) {
-        e.preventDefault();
-        sendMessage();
-      },
-      false
-    );
-  </script>
+  <script type="module">
+    import { ActionheroWebsocketClient } from "../clients/websocket.js";
 
-  <script type="text/javascript">
-    var client;
-    var boot = function () {
-      client = new ActionheroWebsocketClient();
+    const client = new ActionheroWebsocketClient();
 
-      client.on("connected", function () {
-        console.log("connected!");
-      });
-      client.on("disconnected", function () {
-        console.log("disconnected :(");
-      });
+    client.on("connected", function () {
+      console.log("connected!");
+    });
+    client.on("disconnected", function () {
+      console.log("disconnected :(");
+    });
 
-      client.on("error", function (error) {
-        console.log("error", error.stack);
-      });
-      client.on("reconnect", function () {
-        console.log("reconnect");
-      });
-      client.on("reconnecting", function () {
-        console.log("reconnecting");
-      });
+    client.on("error", function (error) {
+      console.log("error", error.stack);
+    });
+    client.on("reconnect", function () {
+      console.log("reconnect");
+    });
+    client.on("reconnecting", function () {
+      console.log("reconnecting");
+    });
 
-      // client.on('message',      function(message){ console.log(message) })
+    // client.on('message',      function(message){ console.log(message) })
 
-      client.on("alert", function (message) {
-        alert(JSON.stringify(message));
-      });
-      client.on("api", function (message) {
-        alert(JSON.stringify(message));
-      });
+    client.on("alert", function (message) {
+      alert(JSON.stringify(message));
+    });
+    client.on("api", function (message) {
+      alert(JSON.stringify(message));
+    });
 
-      client.on("welcome", function (message) {
-        appendMessage(message);
-      });
-      client.on("say", function (message) {
-        appendMessage(message);
-      });
+    client.on("welcome", function (message) {
+      appendMessage(message);
+    });
+    client.on("say", function (message) {
+      appendMessage(message);
+    });
 
-      client.connect(function (error, details) {
-        if (error) {
-          console.error(error);
-        } else {
-          client.action(
-            "createChatRoom",
-            { name: "defaultRoom" },
-            function (data) {
-              if (data.error) console.error(data.error);
-              client.roomAdd("defaultRoom");
-              document.getElementById("name").innerHTML =
-                '<span style="color:#' +
-                intToARGB(hashCode(client.id)) +
-                '">' +
-                client.id +
-                "</span>";
-              document.getElementById("fingerprint").innerHTML =
-                client.fingerprint;
-            }
-          );
-        }
-      });
-    };
+    client.connect(function (error, details) {
+      if (error) {
+        console.error(error);
+      } else {
+        client.action(
+          "createChatRoom",
+          { name: "defaultRoom" },
+          function (data) {
+            if (data.error) console.error(data.error);
+            client.roomAdd("defaultRoom");
+            document.getElementById("name").innerHTML =
+              '<span style="color:#' +
+              intToARGB(hashCode(client.id)) +
+              '">' +
+              client.id +
+              "</span>";
+            document.getElementById("fingerprint").innerHTML =
+              client.fingerprint;
+          }
+        );
+      }
+    });
 
-    var appendMessage = function (message) {
-      var s = "";
+    const appendMessage = function (message) {
+      let s = "";
 
       if (message.welcome != null) {
         s += "<br />";
@@ -154,24 +140,24 @@
         s += "</a >";
       }
 
-      var div = document.getElementById("chatBox");
+      const div = document.getElementById("chatBox");
       div.innerHTML = s + div.innerHTML;
     };
 
-    var sendMessage = function () {
+    const sendMessage = function () {
       var div = document.getElementById("message");
       var message = div.value;
       div.value = "";
       client.say(client.rooms[0], message);
     };
 
-    var formatTime = function (timestamp) {
+    const formatTime = function (timestamp) {
       return new Date(timestamp).toLocaleTimeString();
     };
 
     function hashCode(str) {
       // java String#hashCode
-      var hash = 0;
+      let hash = 0;
       for (var i = 0; i < str.length; i++) {
         hash = str.charCodeAt(i) + ((hash << 5) - hash);
       }
@@ -186,5 +172,14 @@
         (i & 0xff).toString(16);
       return color.substring(0, 6);
     }
+
+    document.getElementById("messageForm").addEventListener(
+      "submit",
+      function (e) {
+        e.preventDefault();
+        sendMessage();
+      },
+      false
+    );
   </script>
 </html>
